--- a/03_CSS_advanced/homework/blogsiteclone/blog.css
+++ b/03_CSS_advanced/homework/blogsiteclone/blog.css
@@ -160,6 +160,61 @@ button:hover{
     border:1px solid var(--blue);
 }
 
+.divider{
+    display: none;
+}
 
 
+@media(max-width:1000px ) and ( min-width:700px){
+  
+
+    .wrapper{
+        width:90%;
+    }
+}
+
+@media(max-width:700px){
+    .posts-list{
+        margin-top:2rem;
+        display:grid;
+        grid-template-columns: 1fr;
+        /* grid-template-rows: repeat(3,1fr); */
+        /* height:100%; */
+        grid-gap:5px;
+    
+    }
+
+    .divider{
+        display: block;
+    }
+
+    .wrapper{
+        width:90%;
+        
+    }
+
+    .content{
+        display:flex;
+        flex-direction: column;
+    }
+
+    .second-half{
+        display: grid;
+        grid-template-columns:1fr 1fr;
+    }
+
+    .about{
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+
+    .misc{
+        justify-self: center;
+    }
+
+    .archives{
+        justify-self:center;
+    }
+
+}
 
