--- a/07_React/1_Basics/Class 3/Plan-with-Ankit/src/index.css
+++ b/07_React/1_Basics/Class 3/Plan-with-Ankit/src/index.css
@@ -1,1 +1,135 @@
 /* write your css here */
+/* agr hum chahe toh sbhi components k lie unki particualr css files bnane k jagah direct index.css me sari classes ko style kr skte h  */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    min-height:100vh;
+    font-family: 'Poppins',sans-serif;
+
+}
+
+.container{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.title{
+    font-size: 3rem;
+    margin:6vh;
+    border:7px dashed rgb(1,17,160);
+    border-radius: 20px;
+    padding:1vh 5vw;
+}
+
+.cards{
+    display:flex;
+    /* align-items: center; */
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width:1300px;
+    margin:0 auto;
+
+}
+
+.card{
+    width:400px;
+    height:max-content;
+    display:flex;
+    flex-direction: column;
+    margin:1rem;
+    padding:1rem;
+    border-radius:10px;
+    align-items: center;
+    box-shadow: rgba(0,0,0,0.24) 0px 3px 8px;
+
+
+}
+
+.image{
+    width:380px;
+    aspect-ratio: 1/1;
+    object-fit:cover;
+}
+
+.tour-info{
+    margin:20px 5px;
+
+
+}
+
+.tour-price{
+    font-size: 1.5rem;
+    font-weight: 700;
+    color:#1faa59;
+}
+
+.tour-name{
+    font-size:1.6rem;
+}
+
+.read-more{
+    color:#12b0e8;
+    cursor: pointer;
+   
+}
+
+.btn-red{
+    background-color: #b4161b21;
+    color:black;
+    border:none;
+    border-radius: 10px;
+    padding:10px 80px;
+    cursor: pointer;
+    border:1px solid #b4161b;
+    margin-top:18px;
+    transition: all 0.3s ease-in-out;
+    font-size:18px;
+    font-weight:bold;
+
+}
+
+.btn-red:hover{
+    background-color: red;
+    color:white;
+    transition: all 0.02s;
+   
+}
+
+.refresh{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height:100vh;
+
+}
+
+.btn-white{
+    background-color: white;
+    color:black;
+    border:none;
+    border-radius: 10px;
+    padding:10px 80px;
+    cursor: pointer;
+    border:1px solid #b4161b;
+    margin-top:18px;
+    transition: all 0.3s ease-in-out;
+    font-size:18px;
+    font-weight:bold;
+}
+
+.btn-white:hover{
+    background-color: black;
+    color:white;
+    transition: all 0.02s;
+}
