--- a/11_Final_EDtech_project/frontend/src/App.css
+++ b/11_Final_EDtech_project/frontend/src/App.css
@@ -1,8 +1,11 @@
-/* write your css here */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html,body{
-    overflow-x:hidden;
+html, body {
+    overflow-x: hidden;
+}
+
+.homepage_bg {
+    background: url("../src/assets/Images/bghome.svg");
 }
